--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="AgileStocks">
+    <wb-module deploy-name="OldAgileStocks">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
-        <property name="context-root" value="AgileStocks"/>
-        <property name="java-output-path" value="/AgileStocks/target/classes"/>
+        <property name="java-output-path" value="/OldAgileStocks/target/classes"/>
+        <property name="context-root" value="OldAgileStocks"/>
     </wb-module>
 </project-modules>
