--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,11 +1,11 @@
 body{
 	background-color: #e9eabd;
-	background-image: url("pics/longhorn.png");
+	/*background-image: url("pics/longhorn.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     opacity: 0.9;
-	filter: alpha(opacity=90);
+	filter: alpha(opacity=90);*/
 }
 
 h1{
@@ -29,14 +29,18 @@ body img{
 	margin: 10px auto;
 }
 
+body form fieldset legend input{
+	margin: 10px;
+}
+
 #login {
 	clear: both;
     position: relative;
     z-index: 10;
     height: 3em;
-    margin-left: 45%;
-	width: 100px;
-	height: 50px;
+    margin-left: 40%;
+	width: 300px;
+	height: 100px;
 }
 
 #page_footer p{
